# metaflow-dataprofiler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
metaflow_dataprofiler/: __init__.py
metaflow_extensions/dataprofile/plugins/cards/dataprofile/: __init__.py  card_decorator.py
tests/: test_flow.py  test_unit.py
