[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-dataprofiler"
version = "0.1.0"
description = "Automatic DataFrame profiling card for Metaflow — powered by ydata-profiling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["metaflow", "card", "dataprofile", "pandas", "eda", "ydata-profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "metaflow>=2.7",
    "ydata-profiling>=4.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-dataprofiler"
Issues   = "https://github.com/npow/metaflow-dataprofiler/issues"

[tool.setuptools.packages.find]
namespaces = true
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
